k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nailshop-api
  namespace: nailshop
spec:
  selector:
    app: nailshop-api
  ports:
    - port: 8000
      targetPort: 8000
